close #6 add blueprints

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: Home
 ---
 
-    {% include components/masterhead.html
+    {% include components/masthead.html
       btn_href="#butwhy"
       btn_txt="But why?"
       title="Prolike"
