--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@ title: Home
       id="butwhy"
       btn_href="#services"
       btn_txt="But how?"
-      title="We're building a master apprentice relationship</br>
-        ...offering  a practicum"
+      title="We're reinventing the master/apprentice workplace</br>
+        ...offering  a practicum to Young Independent Professionals"
       caption="We run a frank and transparent business, teaching the
-        <span title=\"Young Independen Professionals\">yipees*</span> the ins
-        and outs of being a professional consultant"
+        <span title=\"Young Independent Professionals\">yipees*</span> the ins
+        and outs of being a professional consultant, freelancer, innovator or entrepreneur"
     %}
 
     <section id="services">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">At Your Service</h2>
+            <h2 class="section-heading">How We Work</h2>
             <hr class="my-4">
           </div>
         </div>
@@ -39,29 +39,29 @@ title: Home
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Sturdy Templates</h3>
-              <p class="text-muted mb-0">Our templates are updated regularly so they don't break.</p>
+              <h3 class="mb-3">Creating Value</h3>
+              <p class="text-muted mb-0">We only invoice when we create value. Exploration and experiments are covered internally</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Ready to Ship</h3>
-              <p class="text-muted mb-0">You can use this theme as is, or you can make changes!</p>
+              <h3 class="mb-3">Continuous Delivery</h3>
+              <p class="text-muted mb-0">The digital transformation is real: Our deliveries are programmable and immutable</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Up to Date</h3>
-              <p class="text-muted mb-0">We update dependencies to keep things fresh.</p>
+              <h3 class="mb-3">Prolike stack</h3>
+              <p class="text-muted mb-0">We provide a collaborative technology stack and work through a simple Kanban approach</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Made with Love</h3>
-              <p class="text-muted mb-0">You have to make your websites with love these days!</p>
+              <h3 class="mb-3">Technical Excellence</h3>
+              <p class="text-muted mb-0">Elders are constantly backing and mentoring the yipees. Quality is built in, not glued on</p>
             </div>
           </div>
         </div>
@@ -77,7 +77,7 @@ title: Home
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    GDPR File Drop
                   </div>
                   <div class="project-name">
                     Project Name
@@ -165,10 +165,14 @@ title: Home
       </div>
     </section>
 
-    <section class="bg-dark text-white">
+    <section class="bg-dark text-white" style="padding:4em 0;">
       <div class="container text-center">
-        <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
+        <h2 class="mb-4">Se our ongoing projects</h2>
+        <div class="col-lg-10 mx-auto">
+        <p>All our projects are described in <span style="color:#007bff"> blue prints</span>. Are you a yipee waiting to join or a customer
+        waiting to come clean - go and be inspired. Join our tribe</p>
+        </div>
+        <a class="btn btn-light btn-xl sr-button" href="/blueprints/">Blue prints</a>
       </div>
     </section>
 
