--- a/index.html
+++ b/index.html
@@ -65,10 +65,13 @@ title: Home
             </div>
           </div>
         </div>
-      </div>
+        <div class="col-lg-12 mx-auto text-center" style="padding: 2em 2em;">
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="/#portfolio">But What?</a>
+        </div>
+      </div
     </section>
 
-    <section class="p-0" id="portfolio">
+    <!--section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
@@ -163,16 +166,16 @@ title: Home
           </div>
         </div>
       </div>
-    </section>
+    </section-->
 
-    <section class="bg-dark text-white" style="padding:4em 0;">
+    <section  id="portfolio" class="bg-dark text-white" >
       <div class="container text-center">
         <h2 class="mb-4">Se our ongoing projects</h2>
-        <div class="col-lg-10 mx-auto">
+        <div class="col-lg-10 mx-auto" style="padding-bottom:2em;">
         <p>All our projects are described in <span style="color:#007bff"> blue prints</span>. Are you a yipee waiting to join or a customer
         waiting to come clean - go and be inspired. Join our tribe</p>
         </div>
-        <a class="btn btn-light btn-xl sr-button" href="/blueprints/">Blue prints</a>
+        <a  class="btn btn-light btn-xl sr-button" href="/blueprints/">Blue prints</a>
       </div>
     </section>
 
