close #31 rename blueprints to gigs

--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@ title: Home
       <div class="container text-center">
         <h2 class="mb-4">Se our ongoing projects</h2>
         <div class="col-lg-10 mx-auto" style="padding-bottom:2em;">
-        <p>All our projects are described in <span style="color:#007bff"> blue prints</span>. Are you a yipee waiting to join or a customer
+        <p>All our projects are described in <span style="color:#007bff"> gigs</span>. Are you a yipee waiting to join or a customer
         waiting to come clean - go and be inspired. Join our tribe</p>
         </div>
-        <a  class="btn btn-light btn-xl sr-button" href="/blueprints/">Blue prints</a>
+        <a  class="btn btn-light btn-xl sr-button" href="/gigs/">Gigs</a>
       </div>
     </section>
     
