close #65 styling new section implementation

--- a/index.html
+++ b/index.html
@@ -4,66 +4,72 @@ title: Home
 
 <div id="fullpage">
 
- <div class="section">
-{% include components/primary.html
-  id="home"
-  btn_href="#butwhy"
-  btn_txt="But why?"
-  title="Making Awesome Tailored Solutions"
-  caption=" "
-%}
-</div>
-<!-- Home selection end -->
-
-
-<!-- But why? selection -->
-<div class="section">
-{% include components/primary.html
-      id="butwhy"
-      btn_href="#buthow"
-      btn_txt="But how?"
-      title="Reinventing Relations"
-      caption="But why text"
+  <div class="section">
+    {% include components/primary.html
+    id="home"
+    btn_href="#butwhy"
+    btn_txt="But why?"
+    title="Making Awesome Tailored Solutions"
+    caption=" "
     %}
-</div>
-<!-- But why? selection end -->
+  </div>
+  <!-- Home selection end -->
 
-<!-- But how? Selection -->
-<div class="section">
-{% include components/primary.html
-      id="buthow"
-      btn_href="#butwhat"
-      btn_txt="But what?"
-      title="Software's Only Software"
-      caption="But how text"
-    %}
-</div>
-<!-- But how? selection end -->
 
-<!-- But what? selection -->
-<div class="section">
-{% include components/primary.html
-      id="butwhat"
-      btn_href="/gigs/"
-      btn_txt="Show me"
-      title="Show me"
-      caption="But what text"
+  <!-- But why? selection -->
+  <div class="section">
+    {% include components/primary.html
+    id="butwhy"
+    btn_href="#buthow"
+    btn_txt="But how?"
+    title="Reinventing Relations"
+    caption="We run a frank and transparent business, teaching the
+    Yipees the ins and outs of being a professional consultant,
+    freelancer, innovator or entrepreneur"
     %}
-</div>
-<!-- But what? selection end -->
+  </div>
+  <!-- But why? selection end -->
 
-<!-- Contact selection -->
-<div class="section">
-{% include components/contact.html
-      id="contact"
-      title="Let's get in touch!"
-      caption="Ready to start your next project with us?</br>
-        ...or are you a yipee - who want to get onboard?</br>
-        That's great! Give us a call or send us an email and we will
-        get back to you right away!"
-      phone="+45 20 87 25 30"
-      email="hey@prolike.io"
+  <!-- But how? Selection -->
+  <div class="section">
+    {% include components/primary.html
+    id="buthow"
+    btn_href="#butwhat"
+    btn_txt="But what?"
+    title="Software Is Only Software"
+    caption="The digital transformation is real: Our deliveries are programmable
+    and immutable. We provide a collaborative technology stack and
+    work through a simple Kanban approach."
     %}
-</div>
-<!-- But what selection end -->
+  </div>
+  <!-- But how? selection end -->
+
+  <!-- But what? selection -->
+  <div class="section">
+    {% include components/primary.html
+    id="butwhat"
+    btn_href="/gigs/"
+    btn_txt="Show me"
+    title="Come And Jam With Us"
+    caption="All our projects are described in blue prints. Are you a
+    yipee waiting to join or a customer waiting to come
+    clean - go and be inspired. Join our tribe!"
+    %}
+  </div>
+  <!-- But what? selection end -->
+
+  <!-- Contact selection -->
+  <div class="section">
+    {% include components/contact.html
+    id="contact"
+    title="Let's get in touch!"
+    caption="Ready to start your next project with us?</br>
+    ...or are you a yipee - who want to get onboard?</br>
+    That's great! Give us a call or send us an email and we will
+    get back to you right away!"
+    phone="+45 20 87 25 30"
+    email="hey@prolike.io"
+    %}
+  </div>
+  <!-- But what selection end -->
 </div>
