close #73 make button grey on up next gigs

--- a/_pages/gigs.html
+++ b/_pages/gigs.html
@@ -28,7 +28,7 @@ layout: gigs_layout
         <div class="gig_box_body">
             <p>{{ gig.excerpt | strip_html | strip_newlines }}</p>
         </div></div>
-       <a class="view_more" href="{{ gig.url }}">read more..</a>
+       <a class="view_more" href="{{ gig.url }}">View more</a>
 
     </div>
     {% endif %}
@@ -60,7 +60,7 @@ layout: gigs_layout
         <div class="gig_box_body">
             <p>{{ gig.excerpt | strip_html | strip_newlines }} </p>
         </div></div>
-       <a class="view_more" href="{{ gig.url }}">read more..</a>
+       <a class="view_more" href="{{ gig.url }}">View more</a>
     </div>
     {% endif %}
 
@@ -88,7 +88,7 @@ layout: gigs_layout
             <p>{{ gig.excerpt | strip_html | strip_newlines }} </p>
         </div></div>
 
-        <a class="view_more" href="{{ gig.url }}">read more..</a>
+        <a class="view_more" href="{{ gig.url }}">View more</a>
 
         {% endif %}
 
