close #84 delete the text on gigs page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
     id="home"
     btn_href="#butwhy"
     btn_txt="But why?"
-    title="Making Awesome Tailored Solutions"
+    title="Continuously delivering Awesome web solutions"
     caption=" "
     %}
   </div>
