close #75 make the anchor tags links work

--- a/index.html
+++ b/index.html
@@ -4,23 +4,22 @@ title: Home
 
 <div id="fullpage">
 
+<!-- Home section -->
+
   <div class="section">
     {% include components/primary.html
-    id="home"
-    btn_href="#butwhy"
+    btn_href="#why"
     btn_txt="But why?"
-    title="Continuously delivering Awesome web solutions"
+    title="Continuously Delivering <br> Awesome Web Solutions"
     caption=" "
     %}
   </div>
-  <!-- Home selection end -->
 
+<!-- Why section -->
 
-  <!-- But why? selection -->
   <div class="section">
     {% include components/primary.html
-    id="butwhy"
-    btn_href="#buthow"
+    btn_href="#how"
     btn_txt="But how?"
     title="Reinventing Relations"
     caption="We run a frank and transparent business, teaching the
@@ -28,13 +27,12 @@ title: Home
     freelancer, innovator or entrepreneur"
     %}
   </div>
-  <!-- But why? selection end -->
 
-  <!-- But how? Selection -->
+<!-- How section -->
+
   <div class="section">
     {% include components/primary.html
-    id="buthow"
-    btn_href="#butwhat"
+    btn_href="#what"
     btn_txt="But what?"
     title="Software Is Only Software"
     caption="The digital transformation is real: Our deliveries are programmable
@@ -42,12 +40,11 @@ title: Home
     work through a simple Kanban approach."
     %}
   </div>
-  <!-- But how? selection end -->
 
-  <!-- But what? selection -->
+<!-- What section -->
+  
   <div class="section">
     {% include components/primary.html
-    id="butwhat"
     btn_href="/gigs/"
     btn_txt="Show me"
     title="Come And Jam With Us"
@@ -56,12 +53,11 @@ title: Home
     clean - go and be inspired. Join our tribe!"
     %}
   </div>
-  <!-- But what? selection end -->
 
-  <!-- Contact selection -->
-  <div class="section">
+<!-- Contact section -->
+
+  <div class="section contact">
     {% include components/contact.html
-    id="contact"
     title="Let's get in touch!"
     caption="Ready to start your next project with us?</br>
     ...or are you a yipee - who want to get onboard?</br>
@@ -71,5 +67,5 @@ title: Home
     email="hey@prolike.io"
     %}
   </div>
-  <!-- But what selection end -->
+  
 </div>
