close #94 fix blueprint name to gigs in text on frontpage

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ title: Home
     btn_href="/gigs/"
     btn_txt="Show me"
     title="Come And Jam With Us"
-    caption="All our projects are described in blue prints. Are you a
+    caption="All our projects are described in gigs. Are you a
     yipee waiting to join or a customer waiting to come
     clean - go and be inspired. Join our tribe!"
     %}
