close #96 delete dummy gigs

--- a/_pages/gigs.html
+++ b/_pages/gigs.html
@@ -5,7 +5,7 @@ layout: gigs_layout
 
 
 
-<div class="col-lg-4">
+<!-- <div class="col-lg-4"> -->
 
 
     {% assign sorted = site.gigs | sort: gig.date | reverse %}
@@ -36,9 +36,9 @@ layout: gigs_layout
     {% endfor %}
 
 
-</div>
+<!-- </div>
 
-<div class="col-lg-4">
+<div class="col-lg-4"> -->
 
 
 
@@ -67,9 +67,9 @@ layout: gigs_layout
 
     {% endfor %}
 
-</div>
+<!-- </div>
 
-<div class="col-lg-4">
+<div class="col-lg-4"> -->
 
     {% assign sorted = site.gigs | sort: gig.date | reverse %}
     {% for gig in sorted %}
@@ -96,4 +96,4 @@ layout: gigs_layout
         {% endfor %}
     </div>
 
-</div>
+<!-- </div> -->
