close #106 make gigs site responsive

--- a/_pages/gigs.html
+++ b/_pages/gigs.html
@@ -5,7 +5,7 @@ layout: gigs_layout
 
 
 
-<!-- <div class="col-lg-4"> -->
+<div class="col-lg-2">
 
 
     {% assign sorted = site.gigs | sort: gig.date | reverse %}
@@ -36,9 +36,9 @@ layout: gigs_layout
     {% endfor %}
 
 
-<!-- </div>
+</div>
 
-<div class="col-lg-4"> -->
+<div class="col-lg-2">
 
 
 
@@ -67,11 +67,11 @@ layout: gigs_layout
 
     {% endfor %}
 
-<!-- </div>
+</div>
 
-<div class="col-lg-4"> -->
+<!-- <div class="col-lg-4"> -->
 
-    {% assign sorted = site.gigs | sort: gig.date | reverse %}
+    <!-- {% assign sorted = site.gigs | sort: gig.date | reverse %}
     {% for gig in sorted %}
 
 
@@ -94,6 +94,6 @@ layout: gigs_layout
 
 
         {% endfor %}
-    </div>
+    </div> -->
 
 <!-- </div> -->
