close #107 delete hejsa

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Prolike
     {% include components/primary.html
     btn_href="#why"
     btn_txt="But why?"
-    title="Continuously Delivering <br> Awesome Web Solutions hejsa"
+    title="Continuously Delivering <br> Awesome Web Solutions"
     caption=" "
     %}
   </div>
