close #41 implement page content

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@ title: Prolike
     {% include components/primary.html
     btn_href="#why"
     btn_txt="But why?"
-    title="Continuously Delivering <br> Awesome Web Solutions"
-    caption=" "
+    title="Home of the yipees"
+    caption="Where Young Independent Professionals
+    Collaborate to deliver quality
+    software features and implementations<br/>
+    <b>Featuring</b>: Lean software development, Serverles, Programmable and Immutable"
     %}
   </div>
 
@@ -21,9 +24,9 @@ title: Prolike
     {% include components/primary.html
     btn_href="#how"
     btn_txt="But how?"
-    title="Reinventing Relations"
-    caption="We run a frank and transparent business, teaching the
-    Yipees the ins and outs of being a professional consultant,
+    title="Reinventing the master/apprentice workplace"
+    caption="Offering a practicum to the yipees, we run a frank and transparent business, teaching the
+    yipees the ins and outs of being a professional consultant,
     freelancer, innovator or entrepreneur"
     %}
   </div>
@@ -34,23 +37,23 @@ title: Prolike
     {% include components/primary.html
     btn_href="#what"
     btn_txt="But what?"
-    title="Software Is Only Software"
-    caption="The digital transformation is real: Our deliveries are programmable
+    title="Software Is Just Software. <br/>Quality is built in - not glued on"
+    caption="The digital transformation is real: Our deliveries are serverless, programmable
     and immutable. We provide a collaborative technology stack and
-    work through a simple Kanban approach."
+    work through a simple Kanban approach. Elders are constantly backing and mentoring the yipees. We only invouce when we create value - we call it <em>lean</em> "
     %}
   </div>
 
 <!-- What section -->
-  
+
   <div class="section">
     {% include components/primary.html
     btn_href="/gigs/"
     btn_txt="Show me"
-    title="Come And Jam With Us"
-    caption="All our projects are described in gigs. Are you a
+    title="Come and JAM with us"
+    caption="Most of our work is done on serveless JAM stacks. We impersonat the <em>gig economy</em>. All our projects are described as gigs. Are you a
     yipee waiting to join or a customer waiting to come
-    clean - go and be inspired. Join our tribe!"
+    clean - go and be inspired.<br/><a href='#contact' data-proofer-ignore>Join our tribe!</a>"
     %}
   </div>
 
@@ -67,5 +70,5 @@ title: Prolike
     email="hey@prolike.io"
     %}
   </div>
-  
+
 </div>
