close #124 test of website image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Prolike
     {% include components/primary.html
     btn_href="#why"
     btn_txt="But why?"
-    title="Home of the yipees"
+    title="Home Of The Yipees"
     caption="Where Young Independent Professionals
     Collaborate to deliver quality
     software features and implementations<br/>
@@ -24,7 +24,7 @@ title: Prolike
     {% include components/primary.html
     btn_href="#how"
     btn_txt="But how?"
-    title="Reinventing the master/apprentice workplace"
+    title="Reinventing The Master/Apprentice Workplace"
     caption="Offering a practicum to the yipees, we run a frank and transparent business, teaching the
     yipees the ins and outs of being a professional consultant,
     freelancer, innovator or entrepreneur"
@@ -37,7 +37,7 @@ title: Prolike
     {% include components/primary.html
     btn_href="#what"
     btn_txt="But what?"
-    title="Software Is Just Software. <br/>Quality is built in - not glued on"
+    title="Software Is Just Software. <br/>Quality Is Built In - Not Glued On"
     caption="The digital transformation is real: Our deliveries are serverless, programmable
     and immutable. We provide a collaborative technology stack and
     work through a simple Kanban approach. Elders are constantly backing and mentoring the yipees. We only invouce when we create value - we call it <em>lean</em> "
@@ -50,7 +50,7 @@ title: Prolike
     {% include components/primary.html
     btn_href="/gigs/"
     btn_txt="Show me"
-    title="Come and JAM with us"
+    title="Come And JAM With Us"
     caption="Most of our work is done on serveless JAM stacks. We impersonat the <em>gig economy</em>. All our projects are described as gigs. Are you a
     yipee waiting to join or a customer waiting to come
     clean - go and be inspired.<br/><a href='#contact' data-proofer-ignore>Join our tribe!</a>"
