--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ title: Prolike
     {% include components/primary.html
     btn_href="#why"
     btn_txt="But why?"
+    btn_href-call="#"
+    btn_txt-call="Call Me"
     title="Home Of The Yipees"
     caption="Where Young Independent Professionals
     Collaborate to deliver quality
@@ -24,6 +26,8 @@ title: Prolike
     {% include components/primary.html
     btn_href="#how"
     btn_txt="But how?"
+    btn_href-call="#"
+    btn_txt-call="Call Me Please"
     title="Reinventing The Master/Apprentice Workplace"
     caption="Offering a practicum to the yipees, we run a frank and transparent business, teaching the
     yipees the ins and outs of being a professional consultant,
@@ -37,6 +41,8 @@ title: Prolike
     {% include components/primary.html
     btn_href="#what"
     btn_txt="But what?"
+    btn_href-call="#"
+    btn_txt-call="call me Pretty please"
     title="Software Is Just Software. <br/>Quality Is Built In - Not Glued On"
     caption="The digital transformation is real: Our deliveries are serverless, programmable
     and immutable. We provide a collaborative technology stack and
@@ -50,6 +56,8 @@ title: Prolike
     {% include components/primary.html
     btn_href="/gigs/"
     btn_txt="Show me"
+    btn_href-call="#"
+    btn_txt-call="Please call me now"
     title="Come And JAM With Us"
     caption="Most of our work is done on serveless JAM stacks. We impersonat the <em>gig economy</em>. All our projects are described as gigs. Are you a
     yipee waiting to join or a customer waiting to come
