close #132 fix buttons on mobile version

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Prolike
     btn_href="#how"
     btn_txt="But how?"
     btn_href-call="#"
-    btn_txt-call="Call Me Please"
+    btn_txt-call="Call Me"
     title="Reinventing The Master/Apprentice Workplace"
     caption="Offering a practicum to the yipees, we run a frank and transparent business, teaching the
     yipees the ins and outs of being a professional consultant,
@@ -42,7 +42,7 @@ title: Prolike
     btn_href="#what"
     btn_txt="But what?"
     btn_href-call="#"
-    btn_txt-call="call me Pretty please"
+    btn_txt-call="call me"
     title="Software Is Just Software. <br/>Quality Is Built In - Not Glued On"
     caption="The digital transformation is real: Our deliveries are serverless, programmable
     and immutable. We provide a collaborative technology stack and
@@ -57,7 +57,7 @@ title: Prolike
     btn_href="/gigs/"
     btn_txt="Show me"
     btn_href-call="#"
-    btn_txt-call="Please call me now"
+    btn_txt-call="call me"
     title="Come And JAM With Us"
     caption="Most of our work is done on serveless JAM stacks. We impersonat the <em>gig economy</em>. All our projects are described as gigs. Are you a
     yipee waiting to join or a customer waiting to come
