--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Prolike
 
 <div id="fullpage">
 
-<!-- Home section -->
+  <!-- Home section -->
 
   <div class="section">
     {% include components/primary.html
@@ -15,12 +15,12 @@ title: Prolike
     title="Home Of The Yipees"
     caption="Where Young Independent Professionals
     Collaborate to deliver quality
-    software features and implementations<br/>
+    software features and implementations<br />
     <b>Featuring</b>: Lean software development, Serverles, Programmable and Immutable"
     %}
   </div>
 
-<!-- Why section -->
+  <!-- Why section -->
 
   <div class="section">
     {% include components/primary.html
@@ -35,7 +35,7 @@ title: Prolike
     %}
   </div>
 
-<!-- How section -->
+  <!-- How section -->
 
   <div class="section">
     {% include components/primary.html
@@ -43,14 +43,15 @@ title: Prolike
     btn_txt="But what?"
     btn_href-call="#"
     btn_txt-call="call me"
-    title="Software Is Just Software. <br/>Quality Is Built In - Not Glued On"
+    title="Quality Is Built In - Not Glued On"
     caption="The digital transformation is real: Our deliveries are serverless, programmable
     and immutable. We provide a collaborative technology stack and
-    work through a simple Kanban approach. Elders are constantly backing and mentoring the yipees. We only invouce when we create value - we call it <em>lean</em> "
+    work through a simple Kanban approach. Elders are constantly backing and mentoring the yipees. We only invouce when
+    we create value - we call it <em>lean</em> "
     %}
   </div>
 
-<!-- What section -->
+  <!-- What section -->
 
   <div class="section">
     {% include components/primary.html
@@ -59,13 +60,14 @@ title: Prolike
     btn_href-call="#"
     btn_txt-call="call me"
     title="Come And JAM With Us"
-    caption="Most of our work is done on serveless JAM stacks. We impersonat the <em>gig economy</em>. All our projects are described as gigs. Are you a
+    caption="Most of our work is done on serveless JAM stacks. We impersonate the <em>gig economy</em>. All our
+    projects are described as gigs. Are you a
     yipee waiting to join or a customer waiting to come
-    clean - go and be inspired.<br/><a href='#contact' data-proofer-ignore>Join our tribe!</a>"
+    clean - go and be inspired. <a href='#contact' data-proofer-ignore>Join our tribe!</a>"
     %}
   </div>
 
-<!-- Contact section -->
+  <!-- Contact section -->
 
   <div class="section contact">
     {% include components/contact.html
