close #162 small styling fix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Prolike
     btn_txt-call="Call Me"
     title="Home Of The Yipees"
     caption="Where Young Independent Professionals
-    Collaborate to deliver quality
+    collaborate to deliver quality
     software features and implementations<br />
     <b>Featuring</b>: Lean software development, Serverles, Programmable and Immutable"
     %}
