--- a/_pages/stories.html
+++ b/_pages/stories.html
@@ -3,44 +3,156 @@ title: Stories
 layout: stories_layout
 ---
 
-<!-- <div class="row">
-  <div class="col-lg-5 m-auto">
 
-<!-- here the list of tags is collected and displayed
-{% capture all_tags_csv %}
+<!-- <div class="row">
+  <div class="col-lg-5 m-auto"> -->
+
+<!-- here the list of tags is collected and displayed --->
+<!-- {% capture all_tags_csv %}
   {% include functions/tags_array.liquid
   %}
 {% endcapture %}
 
 {% assign all_tags = all_tags_csv | split: "," %}
 {% for t in all_tags %}
-  <p class="tags"><a href="#">{{ t }}</a></p>
+<li class="blog-tag-item" id="{{ t }}-item">
+  <a href onclick="filter('{{ t }}'); return false;">{{ t }}</a>
+</li>
 {% endfor %}
   
   </div>
-</div> -->
+</div>  -->
+
+
+<div class="blog-tags-list row">
+  <div class="col-lg-5 m-auto">
+    {% assign sorted_tags = site.tags | sort %}
+    {% for tag in sorted_tags %}
+    {% assign t = tag | first %}
+    {% assign posts = tag | last %}
+    <div class="blog-tag-item" style="display: inline-block" id="{{ t }}-item">
+      <a class="tags" href onclick="filter('{{ t }}'); return false;">{{ t }}</a>
+    </div>
+    {% endfor %}
+  </div>
+</div>
 
 <div class="row">
-  {% assign sorted = site.stories | sort: story.date | reverse %}
+  <div class="col-lg-5 m-auto">
+    <a class="hidden" id="showAllBtn" href onclick="showallbtn()">SHOW ALL</a>
+  </div>
+</div>
 
-  {% for story in sorted %}
-  
 
+
+
+<div class="row" id="row_all">
+  {% for post in site.posts %}
   <div class="col-lg-3 col-md-4 col-sm-12 story-card">
-    <a href="{{ story.url }}"><div class="card-img-top" style="background-image: url('{{ story.image }}')"></div></a>
+    <a href="{{ post.url }}">
+      <div class="card-img-top" style="background-image: url('{{ post.image }}')"></div>
+    </a>
     <div class="card-body">
-      <!-- {% for tag in story.tags %}
+      {% for tag in post.tags %}
       <p class="tags"><a href="#">{{ tag | downcase }}</a></p>
-      {% endfor %} -->
-      <h5 class="card-title">{{ story.title }}</h5>
-      <p class="author-text">Posted by <span class="author-span">{{ story.author }}</span> on <span class="date-span">{{ story.date | date: "%B %d, %Y" }}</span></p>
-      <p class="card-text">{{ story.description }}</p>
+      {% endfor %}
+      <h5 class="card-title">{{ post.title }}</h5>
+      <p class="author-text">Posted by <span class="author-span">{{ post.author }}</span> on <span
+          class="date-span">{{ post.date | date: "%B %d, %Y" }}</span></p>
+      <p class="card-text">{{ post.description }}</p>
     </div>
   </div>
-
-
-  
-
   {% endfor %}
 
 </div>
+
+{% for tag in site.tags %}
+{% assign t = tag | first %}
+{% assign posts = tag | last %}
+<div class="blog-list-container hidden" id="{{ t }}-container">
+
+  {% for post in posts %}
+  {% if post.tags contains t %}
+  <div class="col-lg-3 col-md-4 col-sm-12 story-card">
+    <a href="{{ post.url }}">
+      <div class="card-img-top" style="background-image: url('{{ post.image }}')"></div>
+    </a>
+    <div class="card-body">
+      {% for tag in post.tags %}
+      <p class="tags"><a href="#">{{ tag | downcase }}</a></p>
+      {% endfor %}
+      <h5 class="card-title">{{ post.title }}</h5>
+      <p class="author-text">Posted by <span class="author-span">{{ post.author }}</span> on <span
+          class="date-span">{{ post.date | date: "%B %d, %Y" }}</span></p>
+      <p class="card-text">{{ post.description }}</p>
+    </div>
+  </div>
+  {% endif %}
+  {% endfor %}
+
+
+
+</div>
+{% endfor %}
+
+
+
+<script>
+  function filter(tag) {
+    setActiveTag(tag);
+    showContainer(tag);
+    hideAll();
+    btnAll();
+  }
+
+  function setActiveTag(tag) {
+    // loop through all items and remove active class
+
+    var items = document.getElementsByClassName('blog-tag-item');
+    for (var i = 0; i < items.length; i++) {
+      items[i].setAttribute('class', 'blog-tag-item');
+    }
+
+    // set the selected tag's item to active
+    var item = document.getElementById(tag + '-item');
+    if (item) {
+      item.setAttribute('class', 'blog-tag-item active');
+    }
+  }
+
+  function showContainer(tag) {
+    // loop through all lists and hide them
+    var lists = document.getElementsByClassName('blog-list-container');
+    for (var i = 0; i < lists.length; i++) {
+      lists[i].setAttribute('class', 'blog-list-container hidden row');
+    }
+
+    // remove the hidden class from the list corresponding to the selected tag
+
+    var list = document.getElementById(tag + '-container');
+    if (list) {
+      list.setAttribute('class', 'blog-list-container row');
+    }
+  }
+
+  if (window.location.hash) {
+    var tag = window.location.hash.split('#')[1];
+    filter(tag);
+  }
+
+  function hideAll() {
+    var all_h = document.getElementById('row_all')
+    all_h.setAttribute('class', 'hidden');
+  }
+
+  function btnAll() {
+    var all_btn = document.getElementById('showAllBtn')
+    all_btn.setAttribute('class', '');
+  }
+
+  function showallbtn() {
+    var all_hidden = document.getElementById('row_all')
+    all_hidden.setAttribute('class', '');
+  }
+
+</script>
