close #169 implement vue and start working with it

--- a/_pages/stories.html
+++ b/_pages/stories.html
@@ -31,7 +31,7 @@ layout: stories_layout
     {% assign t = tag | first %}
     {% assign posts = tag | last %}
     <div class="blog-tag-item" style="display: inline-block" id="{{ t }}-item">
-      <a class="tags" href onclick="filter('{{ t }}'); return false;">{{ t }}</a>
+      <a class="tags" href onclick="filter('{{ t }}'); return false;" data-proofer-ignore>{{ t }}</a>
     </div>
     {% endfor %}
   </div>
